Release ...
* [nt]roff: Support for paragraph-based justification has been added,
  enabled with ".ad p".
* troff: Fixed a typo in the hyphenation code that could result in the
  insertion of a large negative vertical motion in a word containing a
  character above Unicode point U+0800.
* troff: Fixed "\H" and "\S" to become effective if positioned directly
  after a font change (Bugreport by Dirk-Wilhelm Peters).
* [nt]roff: The ".pull" request (introduced in the previous release) has
  been removed again. It is recommended that the traditional approach to
  re-divert text is used instead.
* [nt]roff: Fixed an invalid memory access that had been introduced with
  local strings in the last release.
* troff: Fixed a segmentation violation if a ligature in a hyphenated
  word was not in the current font (Bugreport by Dirk-Wilhelm Peters).
* dpost: Fixed a bug introduced with the previous release that caused
  PostScript errors on a page following colored text unless the "-e"
  option was explicitly specified.
* dpost: Now handles DSC font comments in included PostScript files and
  supplies glyph data for them if specified with a troff ".fp" request.
* dpost: Fixed to compile on NetBSD again (Bugreport by Dirk-Wilhelm Peters).
* eqn: Handles fractional point sizes with "size" and "gsize" now.
* tbl: Fixed a segmentation fault with empty tables that occurred due
  to the changed memory layout introduced in the last release.
* A "Quickstart Guide" document has been added. It is aimed at people
  who know other variants of troff to some extent and want to explore
  Heirloom troff.

Release 061010
* A simplistic XSLT stylesheet to convert OpenDocument text to troff input
  has been added. See the comments in the file "stuff/odt2tr.xsl" for usage
  instructions.
* [nt]roff: Local strings and number registers are now supported. They can
  be defined using ".lds", ".lnr", and ".lnrf". A local string or register