@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)ni.c	1.42 (gritter) 10/21/06
+ * Sccsid @(#)ni.c	1.43 (gritter) 10/29/06
  */
 
 /*
@@ -297,6 +297,7 @@ struct	env env = {
 /* int	hyoff	 */	0,
 /* int	hlm	 */	-1,
 /* int	hlc	 */	0,
+/* int	hylen	 */	5,
 /* int	un1	 */	-1,
 /* int	tabc	 */	0,
 /* int	dotc	 */	'.',
